--- a/src/app/components/dashboard/recursos-humanos/recursos-humanos.component.html
+++ b/src/app/components/dashboard/recursos-humanos/recursos-humanos.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<h2>Recursos Humanos</h2>
+<p-menubar [model]="items" *appRole="['ADMIN']"></p-menubar>
+<p-card>
+    <router-outlet></router-outlet>
+</p-card>
