--- a/src/app/components/dashboard/reports/ventas-report/views/cliente-report-view/cliente-report-view.component.html
+++ b/src/app/components/dashboard/reports/ventas-report/views/cliente-report-view/cliente-report-view.component.html
@@ -1,1 +1,11 @@
-<p>cliente-report-view works!</p>
+<h2>Clientes</h2>
+<p-toolbar>
+    <h3 class="titles">Listado general de Clientes</h3> <p-button label="Generar" icon="pi pi-plus" class="mr-2"
+        (onClick)="listadoClientes()"></p-button>
+</p-toolbar>
+
+
+<p-toolbar>
+    <h3 class="titles">Credito a Clientes</h3> <p-button label="Generar" icon="pi pi-plus" class="mr-2"
+        (onClick)="creditosActivos()"></p-button>
+</p-toolbar>
