--- a/src/app/components/dashboard/compras/compras.component.html
+++ b/src/app/components/dashboard/compras/compras.component.html
@@ -1,20 +1,5 @@
-
-    <button mat-button class="menu-button" routerLink="/dashboard/compras/compra">
-      <mat-icon>format_list_bulleted</mat-icon>
-      <span>Ver Compras Hechas</span>
-    </button>
-    <button mat-button class="menu-button" routerLink="/dashboard/compras/orden-compra">
-      <mat-icon>format_list_bulleted</mat-icon>
-      <span>Ver Orden Compras</span>
-    </button>
-    <button mat-button class="menu-button" routerLink="/dashboard/compras/compra-form">
-    <mat-icon>list_alt</mat-icon>
-    <span>Nueva Compra</span>
-    </button>
-    <button mat-button class="menu-button" routerLink="/dashboard/compras/cuenta-por-pagar">
-      <mat-icon>list_alt</mat-icon>
-      <span>Cuentas por pagar</span>
-      </button>
-
-
-<router-outlet></router-outlet> 
+<h2>Departamento de Compras</h2>
+<p-menubar [model]="items"></p-menubar>
+<p-card>
+    <router-outlet></router-outlet>
+</p-card>
