--- a/src/app/components/dashboard/ventas/venta/venta-form/venta-form.component.html
+++ b/src/app/components/dashboard/ventas/venta/venta-form/venta-form.component.html
@@ -10,7 +10,7 @@
                     <mat-icon>summarize</mat-icon> 
                     <span>Cotizacion</span>
                   </button>
-                <h1> {{service.nuevo}} {{service.Titulo}} : {{service.fecha | date:'short'}}
+                <h1> {{service.nuevo}} {{service.Titulo}}
                   <div *ngIf="loading" class="spinner-border" role="status">
                       <span class="visually-hidden float-right">Loading...</span>
                   </div>
