--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -10,86 +10,41 @@
     <span>Home</span>
 </button>
 
+<mat-divider></mat-divider>
+
 <!-- RECURSOS HUMANOS -->
 <div *appRole="['ADMIN']">
-    <mat-divider></mat-divider>
-    <button mat-button class="menu-button" routerLink="/dashboard/rr-hh/departamento">
+
+    <button mat-button class="menu-button" routerLink="/dashboard/rr-hh">
         <mat-icon>person</mat-icon>
-        <span>Departamento</span>
-    </button>
-    <button mat-button class="menu-button" routerLink="/dashboard/rr-hh/puesto">
-        <mat-icon>info</mat-icon>
-        <span>Puesto</span>
-    </button>
-    <button mat-button class="menu-button" routerLink="/dashboard/rr-hh/empleado">
-        <mat-icon>person</mat-icon>
-        <span>Empleado</span>
+        <span>Empleados</span>
     </button>
 </div>
 
 <!-- ALMACEN -->
 <div *appRole="['ADMIN']">
     <mat-divider></mat-divider>
-    <button mat-button class="menu-button" routerLink="/dashboard/almacen/marca">
-        <mat-icon>layers_clear</mat-icon>
-        <span>Marca</span>
-    </button>
-
-    <button mat-button class="menu-button" routerLink="/dashboard/almacen/categoria">
-        <mat-icon>category</mat-icon>
-        <span>Categoria</span>
-    </button>
-
-    <button mat-button class="menu-button" routerLink="/dashboard/almacen/tipo-precio">
-        <mat-icon>format_list_bulleted</mat-icon>
-        <span>Tipo Precios</span>
-    </button>
-
-    <button mat-button class="menu-button" routerLink="/dashboard/almacen/precio">
-        <mat-icon>filter_list</mat-icon>
-        <span>Precios</span>
-    </button>
-
-    <button mat-button class="menu-button" routerLink="/dashboard/almacen/producto">
+    <button mat-button class="menu-button" routerLink="/dashboard/almacen">
         <mat-icon>inventory_2</mat-icon>
-        <span>Producto</span>
-    </button>
-    <button mat-button class="menu-button" routerLink="/dashboard/almacen/inventario-list">
-        <mat-icon>double_arrow</mat-icon>
-        <span>Inventario</span>
-    </button>
-
-    <button mat-button class="menu-button" routerLink="/dashboard/almacen/traslado/traslados">
-        <mat-icon>commute</mat-icon>
-        <span>Traslados</span>
+        <span>Almacen</span>
     </button>
 </div>
 
 <!-- COMPRAS -->
 <div *appRole="['ADMIN']">
     <mat-divider></mat-divider>
-    <button mat-button class="menu-button" routerLink="/dashboard/compras/compra">
+    <button mat-button class="menu-button" routerLink="/dashboard/compras">
         <mat-icon>storefront</mat-icon>
         <span>Compras</span>
-    </button>
-
-    <button mat-button class="menu-button" routerLink="/dashboard/compras/proveedor">
-        <mat-icon>groups</mat-icon>
-        <span>Proveedores</span>
     </button>
 </div>
 
 <!-- VENTAS -->
 <div *appRole="['ADMIN','EMPLEADO']">
     <mat-divider></mat-divider>
-    <button mat-button class="menu-button" routerLink="/dashboard/ventas/venta">
+    <button mat-button class="menu-button" routerLink="/dashboard/ventas">
         <mat-icon>storefront</mat-icon>
         <span>Ventas</span>
-    </button>
-
-    <button mat-button class="menu-button" routerLink="/dashboard/ventas/cliente">
-        <mat-icon>groups</mat-icon>
-        <span>Clientes</span>
     </button>
 </div>
 
