--- a/src/app/components/dashboard/compras/compra/compra-form/compra-form.component.html
+++ b/src/app/components/dashboard/compras/compra/compra-form/compra-form.component.html
@@ -93,7 +93,7 @@
                         </div>                      
                           <div class="form-group col-md-3" *ngIf="service.Titulo=='Compra'">
                             <span class="p-float-label">
-                              <p-dropdown [autoDisplayFirst]="false" [options]="pago" formControlName="pago" optionLabel="name" [showClear]="true"></p-dropdown>
+                              <p-dropdown [autoDisplayFirst]="false" [options]="pagoType" formControlName="pagoType" optionLabel="name" [showClear]="true"></p-dropdown>
                               <label for="dropdown">Forma Pago</label>
                           </span>           
                           </div>                  
