--- a/src/app/components/dashboard/finanzas/caja/caja-list/caja-cobro-list/caja-cobro-list.component.html
+++ b/src/app/components/dashboard/finanzas/caja/caja-list/caja-cobro-list/caja-cobro-list.component.html
@@ -46,8 +46,8 @@
             </ng-template>
             <ng-template pTemplate="body" let-detalle>
                 <tr>
-                    <td>{{detalle.tipoCobro.nombre}}</td>
-                    <td>{{detalle.cantidad}}</td>
+                    <td>{{detalle.tipoTransaccion.nombre}}</td>
+                    <td>{{detalle.monto}}</td>
                     <td>{{detalle.descripcion}}</td>
                 </tr>
             </ng-template>
