--- a/src/app/components/dashboard/finanzas/finanzas.component.html
+++ b/src/app/components/dashboard/finanzas/finanzas.component.html
@@ -1,4 +1,4 @@
-<p-menubar [model]="items" *appRole="['ADMIN']"></p-menubar>
+<p-menubar [model]="items"></p-menubar>
 <p-card>
     <router-outlet></router-outlet> 
 </p-card>
