--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -105,11 +105,11 @@
 <!-- FINANZAS -->
 <div>
     <mat-divider></mat-divider>
-    <button *appRole="['ADMIN']" mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-config">
+    <button  mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-ingresos">
         <mat-icon>settings_applications</mat-icon>
         <span>Finanzas</span>
     </button>
-    <button *appRole="['CAJERO']" mat-button class="menu-button" routerLink="/dashboard/finanzas">
+<!--     <button *appRole="['CAJERO']" mat-button class="menu-button" routerLink="/dashboard/finanzas">
         <mat-icon>point_of_sale</mat-icon>
         <span>Caja</span>
     </button>    
@@ -128,7 +128,7 @@
     <button *appRole="['CAJERO']" mat-button class="menu-button" routerLink="/dashboard/ventas/cuentas-por-cobrar">
         <mat-icon>credit_card</mat-icon>
         <span>Creditos</span>
-    </button>
+    </button> -->
 </div>
 
 <!-- REPORTES -->
