--- a/src/app/components/dashboard/finanzas/caja/gastos/gastos.component.html
+++ b/src/app/components/dashboard/finanzas/caja/gastos/gastos.component.html
@@ -1,126 +1,91 @@
 <p-toast></p-toast>
 <h2>GASTOS CAJA</h2>
-<p-toolbar>
-        <ng-template pTemplate="right">
-            <button *appRole="['CAJERO']" pButton pRipple label="Generar Gasto" icon="pi pi-plus" class="p-button-success mr-2" (click)="abrir()"></button>
-        </ng-template>
-
-        <ng-template pTemplate="left" [formGroup]="gastoService.form">            
-            <p-button label="Buscar" icon="pi pi-plus" class="mr-2" (onClick)="allGastos()" [disabled]="gastoService.form.invalid"></p-button>
-            <p-calendar formControlName="dates" selectionMode="range" [readonlyInput]="true" [showIcon]="true" class="mr-2"></p-calendar>
-            <p-dropdown class="mr-2" *appRole="['ADMIN']" [options]="cajasList" formControlName="caja" optionValue="id" optionLabel="lugar" placeholder="Seleccione una caja" [showClear]="true">
-                <ng-template let-item pTemplate="item">
-                    <span [class]="'product-badge status-' + item.estado">{{item.lugar}}</span>
-                    <span [class]="'product-badge status-empleado'">{{item.empleado.nombre}} {{item.empleado.apellido}}</span>
-                </ng-template>
-                <ng-template let-item pTemplate="selectedItem">
-                    <span [class]="'product-badge status-' + item.estado">{{item.lugar}}</span>
-                    <span [class]="'product-badge status-empleado'">{{item.empleado.nombre}} {{item.empleado.apellido}}</span>
-                </ng-template>
-            </p-dropdown>
-            <div class="mr-2" *appRole="['ADMIN']">
-                <p-checkbox class="mr-2" [(ngModel)]="checked" [binary]="true" inputId="binary" [ngModelOptions]="{standalone: true}" ></p-checkbox>
-                <label for="binary" class="mr-2">Gastos eliminados</label>
-            </div>
-        </ng-template>
-</p-toolbar>
-
-    <p-table #dt [value]="gastos" [rows]="10" [paginator]="true" [globalFilterFields]="['name','country.name','representative.name','status']" responsiveLayout="scroll"
-        [(selection)]="selectedGasto" [rowHover]="true" dataKey="id"
-        currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros." [showCurrentPageReport]="true" >
-        <ng-template pTemplate="header">
-            <tr>
-                <th></th>
-                <th>Id</th>
-                <th>Fecha</th>
-                <th>Descripcion</th>
-                <th>Documento</th>
-                <th>Monto</th>
-                <th>Caja - Empleado</th>
-                <th>Responsable</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-gasto>
-            <tr [ngClass]="{'gastoDeleted': gasto.deletedAt != null}">
-                <td><p-button *ngIf="gasto.deletedAt != null" icon="pi pi-search" styleClass="p-button-danger" (click)="deleteResponsible(gasto);op.toggle($event)"></p-button></td>
-                <td>{{gasto.id}}</td>
-                <td>{{gasto.fecha | date: 'EEEE, MMMM d, y, h:mm a'}}</td>
-                <td>{{gasto.descripcion}}</td>
-                <td>{{gasto.documento}}</td>
-                <td>{{gasto.monto}}</td>
-                <td>{{gasto.caja.lugar + ' - '+ gasto.caja.empleado.nombre + ' ' + gasto.caja.empleado.apellido}}</td>
-                <td>{{gasto.empleado.nombre + ' ' + gasto.empleado.apellido }}</td> 
-                <!-- <td><p-avatar [image]="gasto.foto | nophoto" pBadge value="4" severity="danger" styleClass="mr-2" size="xlarge"></p-avatar></td> -->
-                <td>
-                    <p-image *ngIf="gasto.foto != null" [src]="gasto.foto | nophoto" alt="Image" width="64" height="64" [preview]="true"></p-image>
-                </td>
-                <!-- <td><button pButton pRipple icon="pi pi-camera" class="p-button-rounded p-button-success" (click)="foto(gasto.foto)"></button></td> -->               
-                <td><button *appRole="['CAJERO']" pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="deleteGasto(gasto)"></button></td>               
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="emptymessage">
-            <tr>
-                <td colspan="10">Seleccione una fecha.</td>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="footer">
-            <tr>
-                <td></td>
-                <td colspan="4" class="text-right">Total</td>
-                <td>{{total}}</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </ng-template>
+<div *ngIf="load">
+    <p-toolbar>
+            <ng-template pTemplate="right">
+                <button *appRole="['CAJERO']" pButton pRipple label="Generar Gasto" icon="pi pi-plus" class="p-button-success mr-2" (click)="abrir()"></button>
+                <p-button *appRole="['CAJERO']" label="Fondos Caja Chica" icon="pi pi-plus" class="mr-2" (onClick)="verDetalleFondosCajaChica()"></p-button>
+            </ng-template>
+    
+            <ng-template pTemplate="left" [formGroup]="gastoService.form">            
+                <p-button label="Buscar" icon="pi pi-plus" class="mr-2" (onClick)="allGastos()" [disabled]="gastoService.form.invalid"></p-button>
+                <p-calendar formControlName="dates" selectionMode="range" [readonlyInput]="true" [showIcon]="true" class="mr-2"></p-calendar>
+                <p-dropdown  class="mr-2" *appRole="['ADMIN']" [options]="cajasList" formControlName="caja" optionValue="id" optionLabel="nombre" placeholder="Seleccione una caja" [showClear]="true">
+                    <ng-template let-item pTemplate="item">
+                        <span [class]="'product-badge status-' + item.estado">{{item.nombre}}</span>
+                        <span [class]="'product-badge status-empleado'">{{item.empleado.nombre}} {{item.empleado.apellido}}</span>
+                    </ng-template>
+                    <ng-template let-item pTemplate="selectedItem">
+                        <span [class]="'product-badge status-' + item.estado">{{item.nombre}}</span>
+                        <span [class]="'product-badge status-empleado'">{{item.empleado.nombre}} {{item.empleado.apellido}}</span>
+                    </ng-template>
+                </p-dropdown>
+                <div class="mr-2" *appRole="['ADMIN']">
+                    <p-checkbox class="mr-2" [(ngModel)]="checked" [binary]="true" inputId="binary" [ngModelOptions]="{standalone: true}" ></p-checkbox>
+                    <label for="binary" class="mr-2">Gastos eliminados</label>
+                </div>
+            </ng-template>
+    </p-toolbar>
+    
+    <p-table #dt [value]="gastos" [rows]="10" [paginator]="true" responsiveLayout="scroll"
+            [(selection)]="selectedGasto" [rowHover]="true" dataKey="id"
+            currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros." [showCurrentPageReport]="true" >
+            <ng-template pTemplate="header">
+                <tr>
+                    <th></th>
+                    <th>Id</th>
+                    <th>Fecha</th>
+                    <th>Solicitante</th>
+                    <th>Descripcion</th>
+                    <th>Documento</th>
+                    <th>Monto</th>
+                    <th>Tipo Gasto</th>
+                    <th *appRole="['ADMIN']">Caja - Empleado</th>
+                    <th>Responsable</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-gasto>
+                <tr [ngClass]="{'gastoDeleted': gasto.deletedAt != null}">
+                    <td><p-button *ngIf="gasto.deletedAt != null" icon="pi pi-search" styleClass="p-button-danger" (click)="deleteResponsible(gasto);op.toggle($event)"></p-button></td>
+                    <td>{{gasto.id}}</td>
+                    <td>{{gasto.fecha | date: 'EEEE, MMMM d, y, h:mm a'}}</td>
+                    <td>{{gasto.solicitante}}</td>
+                    <td>{{gasto.descripcion}}</td>
+                    <td>{{gasto.documento}}</td>
+                    <td>{{gasto.monto}}</td>
+                    <td>{{gasto.tipoGasto.nombre}}</td>
+                    <td *appRole="['ADMIN']">{{gasto.caja.nombre + ' - '+ gasto.caja.empleado.nombre + ' ' + gasto.caja.empleado.apellido}}</td>
+                    <td>{{gasto.empleado.nombre + ' ' + gasto.empleado.apellido }}</td> 
+                    <!-- <td><p-avatar [image]="gasto.foto | nophoto" pBadge value="4" severity="danger" styleClass="mr-2" size="xlarge"></p-avatar></td> -->
+                    <td>
+                        <p-image *ngIf="gasto.foto != null" [src]="gasto.foto | nophoto" alt="Image" width="64" height="64" [preview]="true"></p-image>
+                    </td>
+                    <!-- <td><button pButton pRipple icon="pi pi-camera" class="p-button-rounded p-button-success" (click)="foto(gasto.foto)"></button></td> -->               
+                    <td><button *appRole="['CAJERO']" pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="deleteGasto(gasto)"></button></td>               
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage">
+                <tr>
+                    <td colspan="10">Seleccione una fecha.</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="footer">
+                <tr>
+                    <td></td>
+                    <td colspan="4" class="text-right">Total</td>
+                    <td></td>
+                    <td>{{total}}</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </ng-template>
     </p-table>
 
-
-<div [formGroup]="gastoService.formGasto">
-<p-dialog [(visible)]="dialog" [style]="{width: '450px'}" header="Generar gasto" [modal]="true" [closable]="false" styleClass="p-fluid">
-
-    <ng-template pTemplate="content">
-        <div class="field">
-            <label>Documento.</label>
-            <input type="text" pInputText required formControlName="documento" />
-            <small *ngIf="campoValido('documento')" class="p-error block">Debe ingresar un No. Documento.</small>
-        </div>
-        <div class="field">
-            <label>Descripcion</label>
-            <textarea  pInputTextarea required rows="3" cols="20" formControlName="descripcion"></textarea>
-            <small *ngIf="campoValido('descripcion')" class="p-error block">Debe ingresar una descripcion.</small>
-        </div>
-
-        <div class="formgrid grid">
-            <div class="field col">
-                <label for="price">Monto</label>
-                <p-inputNumber mode="currency" currency="GTQ" locale="es-GT" formControlName="monto"></p-inputNumber>
-                <small *ngIf="campoValido('monto')" class="p-error block">Debe ingresar un monto.</small>
-            </div>
-        </div>
-        <p-fileUpload #form name="foto[]" (onSelect)="onSelect($event, form)" accept="image/*" chooseLabel="Cargar" uploadLabel="Subir" cancelLabel="Cancelar"
-        [fileLimit]="1" [showUploadButton]="false">
-            <ng-template pTemplate="content">
-            </ng-template>
-        </p-fileUpload>
-    </ng-template>
-    
-
-    <ng-template pTemplate="footer">
-        <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
-        <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="saveGasto()" [disabled]="gastoService.formGasto.invalid"></button>
-    </ng-template>
-
-</p-dialog>
 </div>
-
-<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
-
-
-
 
 <p-overlayPanel #op [showCloseIcon]="true" [style]="{width: '450px'}">
     <ng-template pTemplate>
